# flibusta_ass_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: ai_instruction.example.md  bot_config.example.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_PLAN.md
src/bot/: main.py
src/bot/clients/: __init__.py  openrouter_client.py
src/bot/core/: __init__.py  config.py  logger.py  types.py
src/bot/handlers/: channel_comments.py  group_messages.py
src/bot/middleware/: error_handler.py  logging.py
src/bot/services/: ai_assistant.py  button_generator.py  message_analyzer.py
tests/: test_main.py
tests/test_clients/: test_openrouter_client.py
tests/test_core/: __init__.py  test_config.py  test_logger.py  test_types.py
tests/test_handlers/: test_channel_comments.py  test_group_messages.py
tests/test_middleware/: test_error_handler.py  test_logging.py
tests/test_services/: test_ai_assistant.py  test_button_generator.py  test_message_analyzer.py
